--- a/src/pages/Register/Register.scss
+++ b/src/pages/Register/Register.scss
@@ -2,6 +2,8 @@
   border: 1px solid #ccc;
   margin: 0 auto;
   margin-top: 50px;
+  border-radius: 10px;
+
   .register-title {
     text-align: center;
     font-size: 30px;
