38: Load avatar, add header for table user

--- a/src/components/Admin/User/UserTable.scss
+++ b/src/components/Admin/User/UserTable.scss
@@ -8,3 +8,28 @@
   text-align: center;
   margin-top: 20px;
 }
+
+.user-title-header {
+  display: flex;
+  justify-content: space-between;
+
+  .title-name {
+    font-size: 18px;
+    font-weight: bold;
+  }
+
+  .right-content {
+    display: flex;
+    gap: 15px;
+
+    .icon-refresh {
+      :hover {
+        -webkit-animation: rotating 2s linear infinite;
+        -moz-animation: rotating 2s linear infinite;
+        -ms-animation: rotating 2s linear infinite;
+        -o-animation: rotating 2s linear infinite;
+        animation: rotating 2s linear infinite;
+      }
+    }
+  }
+}
