--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -59,9 +59,10 @@
           border: 1px solid #e8e8e8;
 
           .product-thumbnail {
+            text-align: center;
             img {
-              width: 100%;
-              height: 100%;
+              width: 200px;
+              height: 200px;
             }
           }
 
