--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -25,6 +25,10 @@
       color: #cdaa1f;
 
       &:hover {
+        border: 1px solid red;
+        border-radius: 5px;
+        width: 50px;
+        height: 50px;
         text-decoration: underline;
       }
     }
