--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -21,14 +21,14 @@
     .cart-icon {
       cursor: pointer;
 
-      font-size: 30px;
+      width: 50px;
+      height: 50px;
       color: #cdaa1f;
+      padding: 10px;
 
       &:hover {
-        border: 1px solid red;
         border-radius: 5px;
-        width: 50px;
-        height: 50px;
+        background-color: #f5efd6;
         text-decoration: underline;
       }
     }
