--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -76,6 +76,7 @@ main {
 
 body {
   line-height: 1;
+  height: 100vh;
 }
 
 ol,
@@ -154,4 +155,11 @@ input {
     -o-animation: rotating 2s linear infinite;
     animation: rotating 2s linear infinite;
   }
+}
+
+.layout-app {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
 }
