--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,6 +1,7 @@
 .homepage-background {
   background-color: #f5f5fa;
   padding-bottom: 20px;
+  flex-grow: 1;
 
   .homepage-container {
     margin: 0 auto;
@@ -12,7 +13,7 @@
       height: 100%;
       border-radius: 10px;
       background-color: white;
-
+      padding: 0 10px;
       .filter-header {
         display: flex;
         justify-content: space-between;
@@ -35,9 +36,10 @@
 
     .right-content {
       padding: 0 20px !important;
-      padding-bottom: 20px !important;
+      padding-bottom: 60px !important;
       border-radius: 10px;
       background-color: white;
+      position: relative;
 
       .tab-header {
         .ant-tabs-nav {
@@ -45,53 +47,58 @@
         }
       }
 
-      .right-content-wrapper {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-gap: 15px;
-        align-content: center;
+      .product-content {
+        .right-content-wrapper {
+          display: grid;
+          grid-template-columns: 1fr 1fr 1fr;
+          grid-gap: 15px;
+          align-content: center;
 
-        .product-wrapper {
-          cursor: pointer;
-          padding: 10px 0;
-          width: 250px;
-          min-height: 350px;
-          border: 1px solid #e8e8e8;
+          .product-wrapper {
+            cursor: pointer;
+            padding: 10px 0;
+            width: 250px;
+            min-height: 350px;
+            border: 1px solid #e8e8e8;
 
-          .product-thumbnail {
-            text-align: center;
-            img {
-              width: 200px;
-              height: 200px;
+            .product-thumbnail {
+              text-align: center;
             }
-          }
 
-          .product-information {
-            text-align: left;
-            padding: 5px 20px;
+            .product-information {
+              text-align: left;
+              padding: 5px 20px;
 
-            .title {
-              &:hover {
-                color: #ffcd00;
+              .title {
+                &:hover {
+                  color: #ffcd00;
+                }
               }
-            }
 
-            .mail-shipping {
-              line-height: 20px;
-              display: flex;
-              margin-top: 10px;
-              padding: 10px 0;
-              border-top: 1px solid #ccc;
-              color: rgb(128, 128, 137);
+              .mail-shipping {
+                line-height: 20px;
+                display: flex;
+                margin-top: 10px;
+                padding: 10px 0;
+                border-top: 1px solid #ccc;
+                color: rgb(128, 128, 137);
 
-              .mail-icon {
-                margin-right: 10px;
-                color: #cdaa1f;
-                font-size: 20px;
+                .mail-icon {
+                  margin-right: 10px;
+                  color: #cdaa1f;
+                  font-size: 20px;
+                }
               }
             }
           }
         }
+      }
+
+      .pagination {
+        position: absolute;
+        bottom: 0;
+        margin-bottom: 10px;
+        width: 100%;
       }
     }
 
