drawer filter function

--- a/src/pages/Home/ProductItemVertical.scss
+++ b/src/pages/Home/ProductItemVertical.scss
@@ -9,10 +9,12 @@
   .product-information {
     .product-title {
       font-size: 16px;
+      line-height: 20px;
     }
     .product-price {
       font-size: 18px;
       font-weight: 500;
+      padding: 10px 0;
     }
     .mail-shipping {
       line-height: 20px;
