--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -14,6 +14,7 @@
       border-radius: 10px;
       background-color: white;
       padding: 0 10px;
+
       .filter-header {
         display: flex;
         justify-content: space-between;
@@ -66,11 +67,84 @@
 
     .right-content-vertical {
       margin: 0 auto;
+
+      .filter {
+        cursor: pointer;
+        margin-bottom: 15px;
+        width: 100%;
+        display: flex;
+        justify-content: right;
+
+        .filter-button {
+          padding: 10px;
+          border-left: 1px solid #ccc;
+          color: #007185 !important;
+        }
+
+        .filter-drawer {
+          .filter-form-vertical {
+            .category-header {
+              display: flex;
+              gap: 20px;
+            }
+          }
+        }
+      }
+
       .tab-header {
         .ant-tabs-nav {
           font-weight: bold;
         }
       }
+    }
+  }
+}
+
+// css for filter drawer
+.filter-drawer {
+  .filter-form-vertical {
+    .feature-header {
+      display: flex;
+      gap: 10px;
+      margin-bottom: 5px;
+    }
+
+    .feature-filter {
+      margin-bottom: 10px;
+      button {
+        padding: 7px;
+        border: none;
+        border-radius: 5px;
+        margin-right: 10px;
+        cursor: pointer;
+
+        &.active {
+          background-color: #fad33a;
+        }
+      }
+    }
+    .category-header {
+      display: flex;
+      gap: 10px;
+      margin-bottom: 5px;
+    }
+
+    .category-select-vertical {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+      gap: 5px;
+    }
+
+    .price-range-header {
+      display: flex;
+      gap: 10px;
+      margin-bottom: 5px;
+    }
+
+    .price-select-vertical {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+      gap: 5px;
     }
   }
 }
