fix css filter drawer

--- a/src/pages/Home/FilterDrawer.scss
+++ b/src/pages/Home/FilterDrawer.scss
@@ -8,12 +8,12 @@
     }
 
     .feature-filter {
-      margin-bottom: 10px;
       button {
         padding: 7px;
         border: none;
         border-radius: 5px;
         margin-right: 10px;
+        margin-bottom: 10px;
         cursor: pointer;
 
         &.active {
@@ -43,6 +43,24 @@
       display: grid;
       grid-template-columns: 1fr 1fr 1fr 1fr;
       gap: 5px;
+    }
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .filter-drawer {
+    .filter-form-vertical {
+      .feature-header {
+        display: flex;
+        gap: 10px;
+        margin-bottom: 5px;
+      }
+
+      .category-select-vertical {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 5px;
+      }
     }
   }
 }
