--- a/src/pages/Cart/Cart.scss
+++ b/src/pages/Cart/Cart.scss
@@ -48,13 +48,15 @@
               }
 
               .quantity {
+                margin-top: 10px;
+                display: flex;
                 .update-quantity {
                   margin-left: 10px;
                   border-radius: 10px;
                   background-color: #ffcd01;
                   cursor: pointer;
                   border: 1px solid #ffcd01;
-                  padding: 0 10px;
+                  padding: 5px 15px;
 
                   &:hover {
                     opacity: 0.8;
@@ -208,6 +210,41 @@
         button {
           margin-bottom: 10px;
           width: 100%;
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .product-cart-background {
+    .product-cart-wrapper {
+      .product-detail-wrapper {
+        .product-detail-left {
+          .product-information {
+            .product-detail-wrap {
+              .product-detail {
+                .quantity {
+                  display: flex;
+                  flex-direction: column;
+
+                  .update-quantity {
+                    display: block;
+                    border-radius: 10px;
+                    background-color: #ffcd01;
+                    cursor: pointer;
+                    border: 1px solid #ffcd01;
+                    padding: 5px 15px;
+                    margin-top: 10px;
+                    margin-left: 0;
+                    &:hover {
+                      opacity: 0.8;
+                    }
+                  }
+                }
+              }
+            }
+          }
         }
       }
     }
