fix some css and add price filter function

--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -22,7 +22,7 @@
         padding: 20px 0;
       }
 
-      .alphabet-header {
+      .category-header {
         display: flex;
         justify-content: space-between;
         margin-bottom: 5px;
