--- a/src/pages/Product/ProductPage.scss
+++ b/src/pages/Product/ProductPage.scss
@@ -16,8 +16,18 @@
       cursor: pointer;
       width: 50%;
 
-      .image-gallery-image {
+      .image-gallery-slide img {
+        min-width: 400px;
         max-width: 400px;
+        min-height: 600px;
+        max-height: 600px;
+      }
+
+      .image-gallery-thumbnails img {
+        min-width: 100%;
+        max-width: 100%;
+        // min-height: 140px;
+        // max-height: 140px;
       }
     }
 
@@ -29,7 +39,7 @@
 
       .product-title {
         font-size: 20px;
-        line-height: 20px;
+        line-height: 30px;
         padding: 10px 0;
       }
 
