--- a/src/pages/Home/ProductItem.scss
+++ b/src/pages/Home/ProductItem.scss
@@ -19,6 +19,11 @@
       }
     }
 
+    .price {
+      font-weight: 500;
+      font-size: 18px;
+    }
+
     .mail-shipping {
       line-height: 20px;
       display: flex;
