--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -1,11 +1,13 @@
 .login-wrapper {
-  height: 100vh;
+  height: 100%;
   background-color: rgb(213, 225, 227);
-  padding-top: 50px;
+  // padding-top: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center; /* Center the content vertically */
 
   .login-page {
     padding: 30px;
-    width: 500px;
     background-color: white;
     border: 1px solid #ccc;
     margin: 0 auto;
@@ -15,10 +17,35 @@
     .login-title {
       font-size: 40px;
       font-weight: bold;
+      text-align: center;
     }
 
     Form {
       margin: 0 auto;
     }
   }
+}
+
+@media only screen and (min-width: 2200px) {
+}
+
+@media only screen and (min-width: 1600px) and (max-width: 2199px) {
+}
+
+@media only screen and (min-width: 1200px) and (max-width: 1599px) {
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+}
+
+@media only screen and (min-width: 576px) and (max-width: 767px) {
+}
+
+@media only screen and (min-width: 481px) and (max-width: 575px) {
+}
+
+@media only screen and (min-width: 375px) and (max-width: 480px) {
 }
